# cyber-security-agents

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  PROMPTS.md  README.md  SUBMISSION_CHECKLIST.md  SWE_ORCHESTRATOR.md  main.py  n8n.json  requirements.txt  setup.py  wrangler.toml
examples/: swe_orchestrator_examples.md  swe_quickstart.py
runs/: run.py
sec_agents/: README.md  cli.py  pyproject.toml  sdk.py
sec_agents/app/: auth.py  main.py  tracing.py
sec_agents/core/: graph.py  memory.py  models.py  swe_agents.py  swe_graph.py  swe_models.py
sec_agents/data/: network_traffic.pcap  sample_logs.json  threat_intelligence.json
sec_agents/evals/: conftest.py  golden_results.json  test_scenarios.py  test_swe_orchestrator.py
sec_agents/notebooks/: demo.ipynb
sec_agents/scenarios/: __init__.py  incident_response.yaml  log_triage.yaml  threat_hunting.yaml
sec_agents/tools/: code_executor.py  mitre_mapper.py  parsers.py  sigma_builder.py
src/: durable_object.js  worker.js
